# protei_cov

./: .clang-format  CMakeLists.txt  Doxyfile  Readme.md  Readme_8md.html  annotated.html  build.sh  builderTests_8cpp.html  builderTests_8cpp__incl.map  builderTests_8cpp__incl.md5  builder_8cpp.html  builder_8cpp__incl.map  builder_8cpp__incl.md5  builder_8hpp.html  builder_8hpp__dep__incl.map  builder_8hpp__dep__incl.md5  builder_8hpp__incl.map  builder_8hpp__incl.md5  builder_8hpp_source.html  classFileRecorder-members.html  classFileRecorder.html  classFileRecorder__coll__graph.map  classFileRecorder__inherit__graph.md5  classFileRecoreder.html  classIManager-members.html  classIManager.html  classIManager__inherit__graph.map  classIManager__inherit__graph.md5  classIRecorder-members.html  classIRecorder.html  classIRecorder__inherit__graph.map  classIRecorder__inherit__graph.md5  classJsonParserTest-members.html  classJsonParserTest.html  classJsonParserTest__coll__graph.md5  classJsonParserTest__inherit__graph.map  classManager-members.html  classManager.html  classManagerBuilder-members.html  classManagerBuilder.html  (+321 more)
.github/workflows/: docs.yaml  release.yaml  releaseForArchBuild.yaml  test.yaml
cmake/: LibsConfig.cmake
include/: baseConfig.hpp  builder.hpp  commonStructures.hpp  config.hpp  httpServer.hpp  interfaces.hpp  jsonParser.hpp  manager.hpp  queue.hpp  recorder.hpp  task.hpp  threadpool.hpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+55 more)
src/: builder.cpp  commonStructures.cpp  config.cpp  httpServer.cpp  jsonParser.cpp  main.cpp  manager.cpp  queue.cpp  recorder.cpp  task.cpp  threadpool.cpp
tests/: base.json  broken.json  builderTests.cpp  commonStructuresTests.cpp  configTests.cpp  example.cpp  jsonParserTests.cpp  lowerBorder.json  managerTests.cpp  queueTests.cpp  upperBorder.json
tools/: load.py
